fixed navbar logo link for project pages and adjusted product hero word-spacing

--- a/css/modules/_product-hero.scss
+++ b/css/modules/_product-hero.scss
@@ -66,6 +66,7 @@
         color: white;
         font-family: Poppins, arial, Helvetica, sans-serif;
         font-size: 100px;
+        word-spacing: 0.5em;
         width: max-content;
     }
 
